<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="SwitchOnpressUser2"
    tools:context=".User2">

    <ImageView
        android:id="@+id/addition2"
        android:layout_width="45dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-5dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="PictureMessageOnclick"
        android:paddingVertical="18dp"
        android:paddingStart="9dp"
        android:paddingEnd="5dp"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/send2"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="-5dp"
        android:background="#00090909"
        android:clickable="true"
        android:onClick="SendOnpressUser2"
        android:paddingVertical="9dp"
        android:src="@drawable/ic_baseline_send_24"
        android:tint="#3945BA"
        android:focusable="true"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/contact2"
        android:layout_width="45dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-5dp"
        android:layout_toRightOf="@id/addition2"
        android:onClick="ContactOnclick"
        android:paddingHorizontal="5dp"
        android:paddingVertical="18dp"
        android:src="@drawable/ic_baseline_contacts_24"
        android:layout_toEndOf="@id/addition2"
        android:contentDescription="@string/todo" />


    <ImageView
        android:id="@+id/locate"
        android:layout_width="45dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-5dp"
        android:layout_toRightOf="@id/contact2"
        android:onClick="LocateOnclick"
        android:paddingHorizontal="5dp"
        android:paddingVertical="18dp"
        android:src="@drawable/ic_baseline_location_on_24"
        android:layout_toEndOf="@id/contact2"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/EditMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainActScrollView2"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/send2"
        android:layout_toLeftOf="@id/send2"
        android:layout_toEndOf="@id/locate"
        android:layout_toRightOf="@id/locate"
        android:background="@drawable/texthere"
        android:fontFamily="@font/lato"
        android:importantForAutofill="no"
        android:inputType="text"
        android:onClick="OnclickEditext2"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/mainActScrollView2"
        android:layout_width="match_parent"
        android:layout_height="601dp"
        android:layout_above="@+id/send2"
        android:layout_below="@+id/AppbarLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-1dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppbarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:tint="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMainName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/master"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvMainSubTile2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.666" />

            <TextView
                android:id="@+id/tvMainSubTile2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato"
                android:text="@string/this_is_you_chatting_with_you"
                android:textColor="#D8D8D8"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/switchFromMain2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:onClick="SwitchOnpressUser2"
                android:src="@drawable/ic_baseline_swap_horizontal_circle_24"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true"
                android:contentDescription="@string/todo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


</RelativeLayout>